--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@ body {
 
 .header {
     height: 120vh !important;
-    background: url(img/img.jpg) no-repeat center;
+    background: url(../img/img.jpg) no-repeat center;
     background-size: cover;
 }
 
@@ -168,7 +168,7 @@ p {
 }
 
 .price {
-    background: url(img/img2.jpg) no-repeat center;
+    background: url(../img/img2.jpg) no-repeat center;
     background-attachment: fixed;
     background-size: cover;
     text-align: center;
