--- a/css/style-capitulos.css
+++ b/css/style-capitulos.css
@@ -9,7 +9,11 @@
 body {
     text-align: center;
     font-family: sans-serif;
-    background-color: #ffffff;
+    background-color: #000000;
+    height: 120vh !important;
+    background: url(../img/img.jpg) no-repeat center;
+    background-size: cover;
+    background-color: #000000;
 }
 
 .head {
@@ -103,7 +107,49 @@ p {
     
 .navbar {
         display: none;
-    }
-   
-    
+    } 
+}
+
+.titulos {
+    display: inline-block;
+    text-align: center;
+    font-family: sans-serif;
+    font-size: 3em;
+    color: #fff;
+    text-shadow: 2px 0 black, 0 2px black, -2px 0 black, 0 -2px black;
+}
+
+.portadas {
+    display: inline-block;
+    width: 20em;
+    height: auto;
+    box-shadow: 0 0 15px black;
+    margin: 1em;
+}
+p {
+    color: #fff;
+    font-size: 1.1em;
+    text-shadow: 2px 0 black, 0 2px black, -2px 0 black, 0 -2px black;
+}
+
+.cbtn {
+    display: inline-block;
+    padding: 10px 40px;
+    border: 1px solid #9c27b0;
+    color: #fff;
+    text-shadow: 2px 0 black, 0 2px black, -2px 0 black, 0 -2px black;
+    background: #9c27b0;
+}
+.cbtn:hover {
+    background: #fff;
+    color: #9c27b0;
+    text-shadow: none;
+}
+video {
+    display: none;
+    width: 40%;
+    margin: 1em;
+}
+#footer {
+    margin: 1em;
 }
